set java 17 + modern language use + code cleaning