@@ -103,7 +103,7 @@ public class PlayerAsOpCommandAction extends Action {
         if (params.get(params.size() - 1).startsWith("%")) {
             return CompleteUtility.complete(params.get(params.size() - 1), Collections.singletonList("%player%"));
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
